# rusty-svg

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml  main.yml
src/: lib.rs
tests/: index.js
