[package]
name = "rusty-svg"
version = "0.1.0"
authors = ["Zimon Dai <daizhuoxian@gmail.com>"]
edition = "2018"

[lib]
crate-type = ['cdylib']

[dependencies]
js-sys = "0.3.46"
resvg = { version = "0.14.1", default-features = false }
tiny-skia = "0.5.1"
usvg = { version = "0.14.1", default-features = false }
wasm-bindgen = "0.2.73"

[profile.release]
lto = true

# Tell `rustc` to optimize for small code size.
opt-level = "s"