[package]
name = "rusty-svg"
version = "0.1.0"
authors = ["Zimon Dai <daizhuoxian@gmail.com>"]
edition = "2018"

[lib]
crate-type = ['cdylib']

[dependencies]
js-sys = "0.3.52"
lyon_algorithms = "0.17.4"
pathfinder_content = "0.5.0"
pathfinder_geometry = "0.5.1"
regex = "1.5.4"
resvg = { version = "0.15.0", default-features = false }
tiny-skia = "0.5.1"
usvg = { version = "0.15.0", default-features = false }
wasm-bindgen = "0.2.75"

# Doc: https://rustwasm.github.io/book/reference/code-size.html#use-the-wasm-opt-tool
[package.metadata.wasm-pack.profile.release]
wasm-opt = ["-O3"] # Optimize aggressively for speed.

# Default profiles: https://doc.rust-lang.org/cargo/reference/profiles.html#default-profiles
[profile.release]
lto = true # Enable Link Time Optimization
opt-level = 3
# Setting this to 1 may improve the performance of generated code, but may be slower to compile.
# https://doc.rust-lang.org/rustc/codegen-options/index.html#codegen-units
codegen-units = 1
